added expandable card functionality to ai suggestions

--- a/index.html
+++ b/index.html
@@ -163,14 +163,32 @@
     .ai-card{
       background: linear-gradient(180deg, rgba(124,77,255,.10), rgba(155,73,255,.06));
       border: 1px solid rgba(124,77,255,.18);
+      margin-top: 10px;
     }
     .ai-title{
       display:flex;
       align-items:center;
+      justify-content:space-between;
       gap:10px;
       font-weight:700;
       margin-bottom: 8px;
       color: #3b2a86;
+      cursor:pointer;
+    }
+    .ai-title::after{
+      content:"▼";
+      transition:transform 0.2s ease;
+    }
+    .ai-card.expanded .ai-title::after{
+      transform:rotate(180deg);
+    }
+    .ai-content{
+      max-height:0;
+      overflow:hidden;
+      transition:max-height 0.3s ease;
+    }
+    .ai-card.expanded .ai-content{
+      max-height:1000px;
     }
     .sparkle{
       width: 28px;
@@ -782,14 +800,18 @@
       <div class="content" id="content">
         <!-- HOME -->
         <section class="panel active" data-panel="home">
-          <div class="card ai-card">
-            <div class="ai-title">
-              <div class="sparkle">✨</div>
-              AI Suggestions
+          <div class="card ai-card" id="aiCard">
+            <div class="ai-title" id="aiToggle">
+              <div style="display:flex;align-items:center;gap:10px;">
+                <div class="sparkle">✨</div>
+                AI Suggestions
+              </div>
             </div>
-            <div class="ai-sub">Based on your household, these chores might need attention:</div>
-            <div id="suggestions"></div>
-            <button class="ai-more" id="moreSuggestions">Get more suggestions</button>
+            <div class="ai-content">
+              <div class="ai-sub">Based on your household, these chores might need attention:</div>
+              <div id="suggestions"></div>
+              <button class="ai-more" id="moreSuggestions">Get more suggestions</button>
+            </div>
           </div>
 
           <div class="add-dashed" id="addDashed">+ Add new chore</div>
@@ -1536,6 +1558,10 @@
      ***********************/
     document.getElementById("fab").addEventListener("click", openModalForAdd);
     document.getElementById("addDashed").addEventListener("click", openModalForAdd);
+
+    document.getElementById("aiToggle").addEventListener("click", ()=>{
+      document.getElementById("aiCard").classList.toggle("expanded");
+    });
 
     document.getElementById("moreSuggestions").addEventListener("click", ()=>{
       currentSuggestions = pickSuggestions(3);
